Fix the vertical alignment of the AT logo on tabs.

--- a/src/main/webapp/sass-hidden/tab.sass
+++ b/src/main/webapp/sass-hidden/tab.sass
@@ -41,7 +41,7 @@
 
     position: absolute
     left: 10px
-    bottom: 1.5px
+    bottom: 4.5px
 
   .minimize
     position: absolute
